client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
.data-files-btn {
  background-color: var(--global-color-accent--normal);
  border-color: var(--global-color-accent--normal);
  border-radius: 0;
}

.data-files-btn-cancel {
  border-radius: 0;
}

#add-button-wrapper {
  padding-left: var(--horizontal-buffer);
}
#data-files-add {
  width: 140px;
}

.data-files-nav {
  padding-top: 20px;
}

/* HACK: Quick solution to prevent styles from cascading into header dropdown */
.data-files-sidebar {
  .dropdown-menu {
    border-color: var(--global-color-accent--normal);
    border-radius: 0;
    margin-top: 11px;
    padding: 0;
    width: 200px;
    vertical-align: top;
  }
  .dropdown-menu::before {
    position: absolute;
    top: -10px;
    left: 65px;
    border-right: 10px solid transparent;
    border-bottom: 10px solid var(--global-color-accent--normal);
    border-left: 10px solid transparent;
    content: '';
  }
  .dropdown-menu::after {
    position: absolute;
    top: -9px;
    left: 66px;
    border-right: 9px solid transparent;
    border-bottom: 9px solid #ffffff;
    border-left: 9px solid transparent;
    content: '';
  }

  .dropdown-item {
    padding: 10px 6px;
    color: var(--global-color-primary--x-dark);
    font-size: 14px;
    i {
      padding-right: 19px;
      font-size: 20px;
      vertical-align: middle;
    }
    &:hover {
      color: var(--global-color-primary--x-dark);
    }
  }
  .dropdown-item:focus,
  .dropdown-item:hover {
    /* FAQ: Before FP-1083, value was #E6E0FB, which matched Design
            and was `--global-color-accent` at 25% opacity on white…
            which is what `--global-color-accent--weak` is now */
    background-color: var(--global-color-accent--weak);
  }
}

.complex-dropdown-item {
  border-top: 1px solid #707070;
  display: flex;
}

.multiline-menu-item-wrapper {
  display: inline-block;
  padding-left: 5px;
  line-height: 1.1em;
  small {
    display: block;
    color: var(--global-color-primary--x-dark);
  }
}

